# haltere-forces

./: .gitignore  README.md  pyproject.toml
examples/: displacement_estimate.py  force_comparison.py  haltere_sim.py  notes.py  parameters.py  plot_triangle.py  plot_triangle_for_slides.py  simple_pitch_calc.py  simplified_forces.py
src/haltere_forces/: __init__.py  halteres.py  simplified_coriolis.py  symbolic_calcs.py  waveform.py
