[project]
name = "haltere-forces"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=2.0.1",
    "matplotlib>=3.9.2",
    "pyside6>=6.7.2",
    "scipy>=1.14.0",
    "quaternionic>=1.0.11",
    "sympy>=1.13.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/haltere_forces"]
